[tool.poetry]
name = "krogon-gocd"
version = "0.0.1"
description = "Krogon step for installing GoCD"
authors = ["Kirmanie L Ravariere <enamrik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"ruamel.yaml" = "^0.15"
click = "^7.0"
bcrypt = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
dictdiffer = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
